...
        android:layout_height="wrap_content"
        android:layout_below="@id/income_frame"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:layout_marginTop="50dp"
            android:backgroundTint="@android:color/holo_red_dark" />
    </LinearLayout>
...
